[package]
name = "rust-dsmr"
version = "0.1.0"
edition = "2018"

[dependencies]
bytes = "1.5.0"
dsmr5 = "0.3.0"
futures = "0.3.29"
serial = "0.4.0"
tokio = { version = "1.33.0", features = [
  "rt-multi-thread",
  "full",
] }
tokio-serial = "5.4.4"
tokio-util = { version = "0.7.10", features = [
  "codec",
] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [features]
# default = []
# libudev = ["mio-serial/libudev"]
# rt = ["tokio/rt-multi-thread"]
# codec = ["tokio-util/codec", "bytes"]

# [dependencies]
# tokio-serial = "5.4.4"

# [dependencies.futures]
# version = "0.3"

# [dependencies.tokio]
# version = "^1.8"
# default-features = false
# features = ["net"]

# [dependencies.tokio-util]
# version = "0.7"
# default-features = false
# optional = true

# [dependencies.mio-serial]
# version = "5.0.3"
# default-features = false

# [dependencies.bytes]
# version = "1"
# default-features = false
# optional = true

# [dependencies.log]
# version = "0.4"

# [dependencies.cfg-if]
# version = "1"

# [dev-dependencies.tokio]
# version = "^1.8"
# features = [
#   "macros",
#   "rt",
#   "process",
#   "time",
#   "fs",
#   "io-util",
# ]
# default-features = false

# [dev-dependencies.env_logger]
# version = "0.10.0"

# [[example]]
# name = "serial_println"
# path = "examples/serial_println.rs"
# required-features = ["rt", "codec"]
