[package]
name = "rust-dsmr"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.31"
dsmr5 = { path = "./dsmr5-master" }
futures = "0.3.29"
influxdb2 = "0.4.4"
serialport = "4.2.2"
influxdb2-structmap = "0.2"
num-traits = "0.2"
tokio = { version = "1.33.0", features = [
  "full",
] }
tokio-cron-scheduler = "0.9.4"
reqwest = "0.11.22"
serde_json = "1.0.107"
serde = "1.0.190"
